axis_distortion/axis_distortion/logs/hls_run_csim_31164.backup.log
  **** HLS Build v2024.2 5238294
INFO: [HLS 200-2005] Using work_dir C:/Users/ZachKrueger/Documents/AI/axis_distortion/axis_distortion 
INFO: [HLS 200-1505] Using default flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2024.2%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-1465] Applying ini 'syn.file=distortion.cpp' from C:/Users/ZachKrueger/Documents/AI/axis_distortion/hls_config.cfg(9)
INFO: [HLS 200-10] Adding design file 'C:/Users/ZachKrueger/Documents/AI/axis_distortion/distortion.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'syn.file=echo.cpp' from C:/Users/ZachKrueger/Documents/AI/axis_distortion/hls_config.cfg(10)
INFO: [HLS 200-10] Adding design file 'C:/Users/ZachKrueger/Documents/AI/axis_distortion/echo.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'syn.file=eq.cpp' from C:/Users/ZachKrueger/Documents/AI/axis_distortion/hls_config.cfg(11)
INFO: [HLS 200-10] Adding design file 'C:/Users/ZachKrueger/Documents/AI/axis_distortion/eq.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'syn.file=control.cpp' from C:/Users/ZachKrueger/Documents/AI/axis_distortion/hls_config.cfg(12)
INFO: [HLS 200-10] Adding design file 'C:/Users/ZachKrueger/Documents/AI/axis_distortion/control.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'tb.file=test_distortion.cpp' from C:/Users/ZachKrueger/Documents/AI/axis_distortion/hls_config.cfg(13)
INFO: [HLS 200-10] Adding test bench file 'C:/Users/ZachKrueger/Documents/AI/axis_distortion/test_distortion.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'tb.file=common.h' from C:/Users/ZachKrueger/Documents/AI/axis_distortion/hls_config.cfg(14)
INFO: [HLS 200-10] Adding test bench file 'C:/Users/ZachKrueger/Documents/AI/axis_distortion/common.h' to the project
INFO: [HLS 200-1465] Applying ini 'tb.file=test_echo.cpp' from C:/Users/ZachKrueger/Documents/AI/axis_distortion/hls_config.cfg(15)
INFO: [HLS 200-10] Adding test bench file 'C:/Users/ZachKrueger/Documents/AI/axis_distortion/test_echo.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'tb.file=test_control.cpp' from C:/Users/ZachKrueger/Documents/AI/axis_distortion/hls_config.cfg(16)
INFO: [HLS 200-10] Adding test bench file 'C:/Users/ZachKrueger/Documents/AI/axis_distortion/test_control.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'syn.top=master_audio_control' from C:/Users/ZachKrueger/Documents/AI/axis_distortion/hls_config.cfg(8)
INFO: [HLS 200-1465] Applying ini 'flow_target=vivado' from C:/Users/ZachKrueger/Documents/AI/axis_distortion/hls_config.cfg(4)
INFO: [HLS 200-1505] Using flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2024.2%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-1465] Applying ini 'part=xc7a35tcpg236-1' from C:/Users/ZachKrueger/Documents/AI/axis_distortion/hls_config.cfg(1)
INFO: [HLS 200-1611] Setting target device to 'xc7a35t-cpg236-1'
INFO: [HLS 200-1465] Applying ini 'csim.code_analyzer=1' from C:/Users/ZachKrueger/Documents/AI/axis_distortion/hls_config.cfg(7)
INFO: [HLS 200-1465] Applying ini 'package.output.format=ip_catalog' from C:/Users/ZachKrueger/Documents/AI/axis_distortion/hls_config.cfg(5)
INFO: [SIM 211-200] Executing Code Analyzer instead of classic HLS C simulation
INFO: [HLS 211-200] Compiling source code distortion.cpp as hardware code with instrumentation
INFO: [HLS 211-200] Compiling source code echo.cpp as hardware code with instrumentation
INFO: [HLS 211-200] Compiling source code control.cpp as hardware code with instrumentation
INFO: [HLS 211-200] Compiling source code C:/Users/ZachKrueger/Documents/AI/axis_distortion/test_distortion.cpp as test bench code with instrumentation
INFO: [HLS 211-200] Compiling source code C:/Users/ZachKrueger/Documents/AI/axis_distortion/test_echo.cpp as test bench code with instrumentation
INFO: [HLS 211-200] Compiling source code C:/Users/ZachKrueger/Documents/AI/axis_distortion/test_control.cpp as test bench code with instrumentation
INFO: [HLS 211-200] Compiling source code control.cpp as test bench code with instrumentation
INFO: [HLS 211-200] Compiling source code distortion.cpp as test bench code with instrumentation
INFO: [HLS 211-200] Compiling source code echo.cpp as test bench code with instrumentation
INFO: [HLS 211-200] Compiling source code eq.cpp as test bench code with instrumentation
C:/Users/ZachKrueger/Documents/AI/axis_distortion/test_distortion.cpp:20:9: error: no matching function for call to 'distortion'
        distortion(in, out, false); // Pass hard clipping parameter
        ^~~~~~~~~~
C:/Users/ZachKrueger/Documents/AI/axis_distortion/common.h:18:6: note: candidate function not viable: requires 4 arguments, but 3 were provided
void distortion(hls::stream<axis_sample> &in, hls::stream<axis_sample> &out, bool enable, bool soft_clipping);
     ^
1 error generated.
slxcmd:0:0: warning: Non-zero exit code: 1 returned by 'INFO: [HLS 211-200] Compiling source code C:/Users/ZachKrueger/Documents/AI/axis_distortion/test_distortion.cpp as test bench code with instrumentation'
ERROR: [SIM 211-200] Code Analyzer execution failed. Consider running the classic C simulation instead by disabling the hls.csim.code_analyzer option in the config file.
ERROR: Problem running csim: child process exited abnormally
INFO: [HLS 200-112] Total CPU user time: 1 seconds. Total CPU system time: 2 seconds. Total elapsed time: 13.879 seconds; peak allocated memory: 162.480 MB.
